@@ -80,7 +80,11 @@ module ActiveSupport
     end
     
     def to_yaml(options = {})
-      time.to_yaml(options).gsub('Z', formatted_offset(true, 'Z'))
+      if options.kind_of?(YAML::Emitter)
+        utc.to_yaml(options)
+      else
+        time.to_yaml(options).gsub('Z', formatted_offset(true, 'Z'))
+      end
     end
     
     def httpdate
